# jarvis-lite

./: .gitignore  DOCUMENTATION.md  README.md  pyproject.toml  verification.md
.codex/: advice-command-draft-plan.md  advice-execution-confirmation-plan.md  batch-tag-history-plan.md  confirm-tagged-documents-tagging-plan.md  context-scan-advice-command-draft.json  context-scan-advice-execution-confirmation.json  context-scan-batch-tag-history.json  context-scan-confirm-tagged-documents-tagging.json  context-scan-daily-report-next-actions.json  context-scan-daily-report-runtime-context.json  context-scan-desktop-kb-summary-quick-command.json  context-scan-desktop-pet-app.json  context-scan-desktop-recent-quick-commands.json  context-scan-desktop-tag-history-entry.json  context-scan-doc-progress-sync.json  context-scan-experience-advice.json  context-scan-experience-command-suggestions.json  context-scan-experience-context-advice.json  context-scan-experience-memory.json  context-scan-experience-reference.json  context-scan-experience-search.json  context-scan-import-numbered-recent-file.json  context-scan-inner-brain-adopt-sample.json  context-scan-inner-brain-classifier-first.json  context-scan-inner-brain-explicit-file-tag.json  context-scan-inner-brain-file-directory-experience-slots.json  context-scan-inner-brain-install-package-013.json  context-scan-inner-brain-label-sample.json  context-scan-inner-brain-preview.json  context-scan-inner-brain-slot-extractors.json  context-scan-inner-brain-tag-slots.json  context-scan-inner-brain-teach-command.json  (+360 more)
src/: app.py
(+349 files in other folders)
