[project]
name = "jarvis-lite"
version = "0.73.0"
description = "Personal local AI assistant prototype."
requires-python = ">=3.13,<3.14"
dependencies = [
    "openai>=2,<3",
    "PySide6>=6,<7",
    "pypdf>=6,<7",
    "tavily-python>=0.7,<1",
]

[project.optional-dependencies]
desktop-build = [
    "pyinstaller>=6,<7",
]

[project.scripts]
jarvis-lite = "jarvis_lite.app:main"
jarvis-lite-desktop = "jarvis_lite.desktop.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"jarvis_lite.desktop" = ["assets/*.svg"]
